--- a/styles.css
+++ b/styles.css
@@ -43,10 +43,10 @@ body {
 }
 
 .tab {
-  flex: 1;
   text-align: center;
   padding: 10px;
   box-sizing: border-box;
+  flex: 1;
 }
 
 .tab button {
@@ -152,18 +152,14 @@ body {
 }
 
 /* Media Queries */
-@media (max-width: 768px) {
-  .tab button {
-    font-size: 16px;
-    padding: 15px;
-    margin: 5px 0;
+@media (min-width: 769px) {
+  .tab-container {
+    justify-content: flex-start;
+    padding-bottom: 10px;
   }
 
-  .content-container {
-    width: 100%;
-  }
-  
-  .header img {
-    padding: 0;
+  .tab {
+    flex: 0 0 auto;
+    margin-right: 10px;
   }
 }
