--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ body {
   padding: 10px;
   box-sizing: border-box;
   flex: 1;
+  margin-bottom: 10px;
 }
 
 .tab button {
@@ -159,7 +160,7 @@ body {
   }
 
   .tab {
-    flex: 0 0 auto;
     margin-right: 10px;
+    flex: 0 0 calc(33.33% - 10px);
   }
 }
